--- a/style.css
+++ b/style.css
@@ -3,6 +3,16 @@
     padding: 0;
 }
 
+body {
+    overflow: hidden;
+}
+
+h1 {
+    text-align: center;
+    font-style: italic;
+    color: white;
+
+}
 .main-container {
     display: flex;
     justify-content: center;
@@ -10,10 +20,13 @@
     height: 100vh;
     width: 100vw;
     background-image: linear-gradient(to right, rgb(199, 124, 208), red);
+    
 }
 
 .gif-container {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-grow: 0;
 }
