--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 body {
@@ -13,13 +14,40 @@ h1 {
     color: white;
 
 }
+
+img {
+    border-radius: 15px;
+    box-shadow: 10px 10px 8px #00000090 ;
+}
+
+button {
+    padding: 10px;
+    border-radius: 15px;
+    background-color: aqua;
+    border: none;
+    transition: ease-in-out;
+    opacity: 0.6;
+}
+
+button:hover {
+    opacity: 1;
+    cursor: pointer;
+}
+
+input[type=text] {
+    padding: 5px;
+    border-radius: 15px;
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
 .main-container {
     display: flex;
     justify-content: center;
     align-content: center;
     height: 100vh;
     width: 100vw;
-    background-image: linear-gradient(to right, rgb(199, 124, 208), red);
+    background-image: linear-gradient(to bottom right, #007462, #c7d426);
     
 }
 
